--- a/src/main/client/src/app/components/navbar/navbar.component.html
+++ b/src/main/client/src/app/components/navbar/navbar.component.html
@@ -3,39 +3,47 @@
     <a [routerLink]="['/']" queryParamsHandling="preserve" class="app-fxFlex app-fxLayout app-row app-center-v">
       <img src="https://netlet.lib.cas.cz/wp-content/uploads/2023/08/netlet-logo-white.svg" title="Netlet"
         class="app-logo" />
-      <span class="app-logo-desc">Analysis & Visualization</span>
-    </a>
-  </div>
-  <div class="app-fxLayout app-row app-center-v">
-    <!-- <a mat-button >{{ 'Login' | translate }}</a> -->
+        <span class="app-logo-desc">Analysis & Visualization</span>
+      </a>
+    </div>
+    <div class="app-fxLayout app-row app-center-v">
+      <!-- <a mat-button >{{ 'Login' | translate }}</a> -->
 
-    <span class="app-container-header" *ngIf="state.selectedTenants().length > 0">{{ 'tenant' | translate }}: {{ formatTenants() }}<span *ngIf="state.currentView">.&nbsp;&nbsp;{{ 'view' | translate }}: {{ state.currentView.route| translate }}</span>
-    </span>
+      @if (state.selectedTenants().length > 0) {
+        <span class="app-container-header">{{ 'tenant' | translate }}: {{ formatTenants() }}@if (state.currentView) {
+          <span>.&nbsp;&nbsp;{{ 'view' | translate }}: {{ state.currentView.route| translate }}</span>
+        }
+      </span>
+    }
     <button mat-button [matMenuTriggerFor]="views">{{'views' | translate}}</button>
     <mat-menu #views="matMenu">
       @for (t of state.views; track t) {
-      <a matButton *ngIf="t.route"  mat-menu-item [routerLink]="[t.route]" queryParamsHandling="preserve" [title]="t.text" (click)="state.currentView = t">{{ t.route | translate}}</a>
+        @if (t.route) {
+          <a matButton  mat-menu-item [routerLink]="[t.route]" queryParamsHandling="preserve" [title]="t.text" (click)="state.currentView = t">{{ t.route | translate}}</a>
+        }
       }
     </mat-menu>
 
     <button mat-button [matMenuTriggerFor]="tenants">{{'tenants' | translate}}</button>
     <mat-menu #tenants="matMenu">
       @for (t of state.tenants; track t) {
-      <a [disabled]="!t.available" mat-menu-item (click)="changeTenant(t)"><mat-icon *ngIf="state.tenant()?.val === t.val">check</mat-icon>{{ t.val | translate}}</a>
+        <a [disabled]="!t.available" mat-menu-item (click)="changeTenant(t)">@if (state.tenant()?.val === t.val) {
+          <mat-icon>check</mat-icon>
+        }{{ t.val | translate}}</a>
       }
     </mat-menu>
     <!-- <mat-menu #tenants="matMenu">
-      @for (t of state.tenants; track t) {
-        <div mat-menu-item>
-      <mat-checkbox (change)="selectTenant(t)" [(ngModel)]="t.selected" >{{ t.val | translate}}</mat-checkbox>
-        </div>
-      }
-    </mat-menu> -->
+    @for (t of state.tenants; track t) {
+      <div mat-menu-item>
+        <mat-checkbox (change)="selectTenant(t)" [(ngModel)]="t.selected" >{{ t.val | translate}}</mat-checkbox>
+      </div>
+    }
+  </mat-menu> -->
 
-    <button mat-button [matMenuTriggerFor]="menu">{{ translator.currentLang | translate}}</button>
-    <mat-menu #menu="matMenu">
-      <button mat-menu-item (click)="onLanguageChanged('cs')">Český</button>
-      <button mat-menu-item (click)="onLanguageChanged('en')">English</button>
-    </mat-menu>
-  </div>
+  <button mat-button [matMenuTriggerFor]="menu">{{ translator.currentLang | translate}}</button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item (click)="onLanguageChanged('cs')">Český</button>
+    <button mat-menu-item (click)="onLanguageChanged('en')">English</button>
+  </mat-menu>
+</div>
 </mat-toolbar>
