--- a/src/main/client/src/app/pages/map-view/map-view.component.html
+++ b/src/main/client/src/app/pages/map-view/map-view.component.html
@@ -1,54 +1,66 @@
 <mat-progress-bar  mode="indeterminate" class="app-loading"></mat-progress-bar>
-<mat-card *ngIf="invalidTenant" appearance="outlined" class="app-invalidTenant">
-  <mat-card-header>
-    <mat-card-title> {{ 'invalidTenant' | translate}} </mat-card-title>
-  </mat-card-header>
-</mat-card>
-<div class="app-fxLayout app-row app-fill" style="position: relative;" *ngIf="!invalidTenant">
-  <div style="flex: 1 30%;" class="app-filters">
-    <div *ngIf="recipients">
-      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-        <mat-expansion-panel-header>
-          <mat-panel-title> {{ 'field.recipients' | translate}} </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-list>
-          @for(identity of recipients; track $index; let idx = $index){
-          <mat-list-item (click)="clickRecipient(identity)">
-            <span [class.app-selected]="identity === activeIdentity"><mat-icon *ngIf="identity === activeIdentity"
-                class="app-va-tb">check</mat-icon>
-              {{ identity.val}} ({{identity.count}})</span>
-          </mat-list-item>
-          }
-        </mat-list>
-      </mat-expansion-panel>
-    </div>
-    <div *ngIf="mentioned">
-      <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
-        <mat-expansion-panel-header>
-          <mat-panel-title> {{ 'field.mentioned' | translate}} </mat-panel-title>
-        </mat-expansion-panel-header>
-        <mat-list>
-          @for(identity of mentioned; track $index; let idx = $index){
-        <mat-list-item (mouseout)="clearHighlight()" (click)="highlightLinks(identity)">
-          {{ identity.val}} ({{identity.count}})
-        </mat-list-item>
-        }
-        </mat-list>
-      </mat-expansion-panel>
-      
-    </div>
+@if (invalidTenant) {
+  <mat-card appearance="outlined" class="app-invalidTenant">
+    <mat-card-header>
+      <mat-card-title> {{ 'invalidTenant' | translate}} </mat-card-title>
+    </mat-card-header>
+  </mat-card>
+}
+@if (!invalidTenant) {
+  <div class="app-fxLayout app-row app-fill" style="position: relative;">
+    <div style="flex: 1 30%;" class="app-filters">
+      @if (recipients) {
+        <div>
+          <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+            <mat-expansion-panel-header>
+              <mat-panel-title> {{ 'field.recipients' | translate}} </mat-panel-title>
+            </mat-expansion-panel-header>
+            <mat-list>
+              @for(identity of recipients; track $index; let idx = $index){
+                <mat-list-item (click)="clickRecipient(identity)">
+                  <span [class.app-selected]="identity === activeIdentity">@if (identity === activeIdentity) {
+                    <mat-icon
+                    class="app-va-tb">check</mat-icon>
+                  }
+                {{ identity.val}} ({{identity.count}})</span>
+              </mat-list-item>
+            }
+          </mat-list>
+        </mat-expansion-panel>
+      </div>
+    }
+    @if (mentioned) {
+      <div>
+        <mat-expansion-panel class="mat-mdc-elevation-specific mat-elevation-z0" [expanded]="true">
+          <mat-expansion-panel-header>
+            <mat-panel-title> {{ 'field.mentioned' | translate}} </mat-panel-title>
+          </mat-expansion-panel-header>
+          <mat-list>
+            @for(identity of mentioned; track $index; let idx = $index){
+              <mat-list-item (mouseout)="clearHighlight()" (click)="highlightLinks(identity)">
+                {{ identity.val}} ({{identity.count}})
+              </mat-list-item>
+            }
+          </mat-list>
+        </mat-expansion-panel>
+      </div>
+    }
   </div>
-    <div class="app-content app-fill-w app-fill-h">
+  <div class="app-content app-fill-w app-fill-h">
     <div class="app-years">
-      <app-years-chart *ngIf="solrResponse?.facets.date_year" [dateYearFacet]="solrResponse.facets.date_year"
+      @if (solrResponse?.facets.date_year) {
+        <app-years-chart [dateYearFacet]="solrResponse.facets.date_year"
         (onChangeLimits)="changeLimits($event)"></app-years-chart>
+      }
     </div>
     <div style="height: 100%; width: 100%;" class="app-fxFlex" leaflet [leafletOptions]="options"
       (leafletMapReady)="onMapReady($event)">
     </div>
-    <div class="app-letters-info" *ngIf="infoHeader">
-      <app-letters-info [header]="infoHeader" [content]="infoContent" (onClose)="closeInfo()"></app-letters-info>
-    </div>
+    @if (infoHeader) {
+      <div class="app-letters-info">
+        <app-letters-info [header]="infoHeader" [content]="infoContent" (onClose)="closeInfo()"></app-letters-info>
+      </div>
+    }
   </div>
-
 </div>
+}
