--- a/src/main/client/src/scss/_app-global.scss
+++ b/src/main/client/src/scss/_app-global.scss
@@ -297,6 +297,11 @@ fieldset {
   width: 100%;
 }
 
+.app-timeline {
+  height: 350px; 
+  width: 100%;
+}
+
 .app-invalidTenant {
     top: 100px;
     height: 120px;
